Fix ALLOWED_HOSTS and CSRF in .env

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,10 @@
 # Django Settings
 SECRET_KEY=your-secret-key-here
-DEBUG=True
-ALLOWED_HOSTS=localhost,127.0.0.1,rmmdc.edu.bd,82.112.238.218,
+DEBUG=False
+ALLOWED_HOSTS=localhost,127.0.0.1,rmmdc.edu.bd,www.rmmdc.edu.bd,82.112.238.218
+
+# CSRF Settings
+CSRF_TRUSTED_ORIGINS=https://rmmdc.edu.bd,https://www.rmmdc.edu.bd
 
 # Database (leave empty for SQLite in development)
 # DATABASE_URL=postgresql://user:password@localhost:5432/school_sms
